# src/main/resources/openapi.yaml
@@ -37,31 +37,6 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Problem'
-  /archive/byggr2:
-    post:
-      tags:
-      - Archive resources
-      summary: Submit a ByggR archive request with BASE64-encoded metadata
-      operationId: byggR2
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ByggRArchiveRequest2'
-        required: true
-      responses:
-        "200":
-          description: Successful operation
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/ArchiveResponse'
-        "400":
-          description: Bad request
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Problem'
   /api-docs:
     get:
       tags:
@@ -159,17 +134,4 @@ components:
         statusCode:
           type: integer
           format: int32
-    ByggRArchiveRequest2:
-      required:
-      - attachment
-      - metadata
-      type: object
-      properties:
-        attachment:
-          $ref: '#/components/schemas/Attachment'
-        metadata:
-          type: string
-          description: Metadata XML
-      description: "Request för att arkivera bygglovshandlingar, med BASE64-encode:ad\
-        \ metadata"
   securitySchemes: {}
